--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ nav .fa{
 /*  contact us page */
 
 .sub-header{
-    height: 75vh;
+    height: 80vh;
     width: 100%;
     background-image: linear-gradient(rgba(4,9,30,0.7),rgba(4,9,30,0.7)),url(contact.jpg);
     background-position: center;
@@ -164,8 +164,8 @@ nav .fa{
     
 }
 .heading{
-    margin-top: 55px;
-    font-size: xx-large;
+    margin-top: 40px;
+    font-size: 50px;
 }
 
 .contact-us{
@@ -213,3 +213,130 @@ nav .fa{
     align-items: center;
     justify-content: center;
 } */
+
+/*-- about us .html -- front look*/
+.header-aboutus{
+    min-height: 75vh;
+    width: 100%;
+    background-image: url(about.jpg);
+    background-size: cover;
+    position: relative;
+
+}
+.aboutus{
+    margin-top: 80px;
+    font-size: 35px;
+    text-align: center;
+    color: #f00000;
+   
+}
+
+/*--- dark over card effect about persons --*/
+.about{
+    margin-top: 50px;
+    padding: 0;
+    min-height: 80vh;
+    background: rgb(87, 84, 84);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: consolas;
+}
+
+.container{
+    width: 10000px;
+    position: relative;
+    display:inline-flex;
+    justify-content: space-between;
+}
+
+.container .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.container .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+}
+
+.container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+    opacity: 0.2;
+    transition: 0.4s;
+}
+
+.container .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+
+.container .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
+    text-align: center;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
+    background: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
+}
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
+}
+
+.container .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 5px;
+    border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover{
+    background: #333;
+    color: #fff;
+}
+@media(max-width: 700px)
+{
+    .container{
+        width: 300px;
+        position:relative;
+        align-items: center;
+        display:block;
+        align-content: center;
+        justify-content: space-between;
+    }
+}
