--- a/style.css
+++ b/style.css
@@ -239,19 +239,19 @@ nav .fa{
     min-height: 40vh;
     background: rgb(87, 84, 84);
     display: flex;
-    /*justify-content: center;*/
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     font-family: consolas;
 }
 
 .container {
-    width: 100%;
+   
     position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 30px;
+    gap: 40px;
 }
 
 .container .card {
